data/derived/comb/progs/unify/prog4621.ml.out
Characters 49-53:
  | VarX -> x*1.00
              ^^^^
Error: This expression has type float but an expression was expected of type
         int
